Final attempt to fix key references overflow

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ ul {
 
 .key-references ul li a{
     color: #000000;
+    display: inline-block;
 }
 
 .abstract {
